* update support check signature (pff)
* move shell item code into libfwsi (check)
* add libfvalue

API
* add functions
  - for shell item
  - for icon location block ?
  - for special and/or known folder identifier

Release:
* check TODOs
* configure
 - check inclusion local library functions
* update manuals
* update macosx package files
* automated tests

Bindings:
* python
* .net
* java

20111009
* updated configure.ac and m4 files
* updated common
* updated libsystem, libuna, libbfio, libfdatetime
* updated pc and spec file

20110828
* updated configure.ac, common, libsystem, libbfio, 

20110711
* bug fix for WINAPI compilation, due to recent changes
* updated msvscpp files
* updated manuals

20110710
* worked on more API functions
* refactored data blocks to separate files

20110707
* added detailed version information
* updated msvscpp files, added VSDebug
* code clean up
* worked on more API functions

20110706
* updated README.mingw
* updated configure
* updated codepage definitions
* updated common, libcstring, libsystem, libuna, libbfio, libfdatetime,
  libfguid,
* added liblnk_get_access_flags_read, liblnk_get_codepage, liblnk_set_codepage
* code clean up
* added tests and examples
* filetime added microseconds precision

20110111
* updated configure.ac
* updated common, libcstring, libsystem, libuna, libbfio, 

20110104
* 2011 update

20101230
* updated msvscpp files
* added unused
* added UTF-16 functions

20101229
* updated configure.ac
* updated include/error.h, include/types.h
* updated libcstring, liberror, libnotify, libsystem, libuna, libbfio,
  libfdatetime
* fixes for mingw compilation

20101228
* updated common
* updated libfwsi

20101023
* updated include/error.h
* updated common, liberror, libnotify, libsystem, libbfio, libfdatetime,
  libfwsi
* code clean up

20100816
* updated libcstring, libsystem, libuna, libbfio

20100802
* updated include/error.h and liberror

20100717
* updated configure.ac
* updated include/error.h and liberror