@@ -28,9 +28,7 @@
  * before including liblnk.h
  */
 #if defined( _WIN32 ) && defined( DLL_EXPORT )
-#if !defined( HAVE_STATIC_EXECUTABLES )
 #define LIBLNK_DLL_IMPORT
-#endif
 #endif
 
 #include <liblnk.h>
