@@ -48,6 +48,9 @@ Bindings:
 * .net
 * java
 
+20111030
+* updated configure.ac and m4 files
+
 20111009
 * updated configure.ac and m4 files
 * updated common
